--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -493,6 +493,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "71ac43f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Id',\n",
+       " 'Name',\n",
+       " 'Family Name',\n",
+       " 'Birthdate',\n",
+       " 'Nationality',\n",
+       " 'Category',\n",
+       " 'Start date',\n",
+       " 'End date',\n",
+       " 'Client Type',\n",
+       " 'Client',\n",
+       " 'Project',\n",
+       " 'Project Type',\n",
+       " 'Task',\n",
+       " 'Owner',\n",
+       " 'Member',\n",
+       " 'Duration (in days)',\n",
+       " 'Project Start date',\n",
+       " 'Project End date']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "member_df.columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "id": "10185833",
    "metadata": {},
