Work in progress

--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -526,7 +526,8 @@
     }
    ],
    "source": [
-    "member_df.columns.tolist()"
+    "project_columns = ['Client Type', 'Client', 'Project', 'Project Type', 'Task', 'Owner']\n",
+    "project_df = member_df[project_columns]"
    ]
   },
   {
