--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -493,41 +493,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "71ac43f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Client Type</th>\n",
+       "      <th>Client</th>\n",
+       "      <th>Project</th>\n",
+       "      <th>Project Type</th>\n",
+       "      <th>Task</th>\n",
+       "      <th>Owner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NTTData</td>\n",
+       "      <td>SEMBU Team</td>\n",
+       "      <td>SEMBU</td>\n",
+       "      <td>Project</td>\n",
+       "      <td>Wikibase</td>\n",
+       "      <td>Emmanuel Jamin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NTTData</td>\n",
+       "      <td>SEMBU Team</td>\n",
+       "      <td>SEMBU</td>\n",
+       "      <td>Project</td>\n",
+       "      <td>Solid Pods</td>\n",
+       "      <td>Emmanuel Jamin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NTTData</td>\n",
+       "      <td>SEMBU Team</td>\n",
+       "      <td>SEMBU</td>\n",
+       "      <td>Project</td>\n",
+       "      <td>Entity Resolution</td>\n",
+       "      <td>Emmanuel Jamin</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['Id',\n",
-       " 'Name',\n",
-       " 'Family Name',\n",
-       " 'Birthdate',\n",
-       " 'Nationality',\n",
-       " 'Category',\n",
-       " 'Start date',\n",
-       " 'End date',\n",
-       " 'Client Type',\n",
-       " 'Client',\n",
-       " 'Project',\n",
-       " 'Project Type',\n",
-       " 'Task',\n",
-       " 'Owner',\n",
-       " 'Member',\n",
-       " 'Duration (in days)',\n",
-       " 'Project Start date',\n",
-       " 'Project End date']"
+       "  Client Type      Client Project Project Type               Task  \\\n",
+       "0     NTTData  SEMBU Team   SEMBU      Project           Wikibase   \n",
+       "1     NTTData  SEMBU Team   SEMBU      Project         Solid Pods   \n",
+       "2     NTTData  SEMBU Team   SEMBU      Project  Entity Resolution   \n",
+       "\n",
+       "            Owner  \n",
+       "0  Emmanuel Jamin  \n",
+       "1  Emmanuel Jamin  \n",
+       "2  Emmanuel Jamin  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "project_columns = ['Client Type', 'Client', 'Project', 'Project Type', 'Task', 'Owner']\n",
-    "project_df = member_df[project_columns]"
+    "project_df = member_df[project_columns]\n",
+    "project_df.head()"
    ]
   },
   {
