--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -583,6 +583,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "89272b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "org = wbi.item.new(\"en\", \"Organization\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "id": "10185833",
    "metadata": {},
