--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -583,20 +583,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "89272b50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "org = wbi.item.new(\"en\", \"Organization\")"
+    "org_item = wbi.item.new(title=\"NTTData\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ddaf6420",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "org_item.labels.set(\"en\", \"NTTData\")\n",
+    "org_item.aliases.set(\"en\", [\"NTT Data\", \"NTT DATA\"])\n",
+    "org_item.descriptions.set(\"en\", \"NTT Data Corporation is a Spanish multinational information technology services and consulting company headquartered in Barcelona, Spain.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'labels': {}, 'descriptions': {}, 'aliases': {}, 'type': 'item', 'claims': {}}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "org_item.get_json()"
+   ]
   },
   {
    "cell_type": "code",
