--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -600,7 +600,9 @@
    "source": [
     "org_item.labels.set(\"en\", \"NTTData\")\n",
     "org_item.aliases.set(\"en\", [\"NTT Data\", \"NTT DATA\"])\n",
-    "org_item.descriptions.set(\"en\", \"NTT Data Corporation is a Spanish multinational information technology services and consulting company headquartered in Barcelona, Spain.\")"
+    "org_item.descriptions.set(\"en\", \"NTT Data Corporation is a Japanese multinational information technology services and consulting company headquartered in Tokyo, Japan.\")\n",
+    "org_item.sitelinks.set(\"enwiki\", \"NTT Data\")\n",
+    "\n"
    ]
   },
   {
