--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -593,16 +593,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "ddaf6420",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Sitelink @5ae8f0 site='enwiki' title='NTT Data' badges=[]>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "org_item.labels.set(\"en\", \"NTTData\")\n",
     "org_item.aliases.set(\"en\", [\"NTT Data\", \"NTT DATA\"])\n",
     "org_item.descriptions.set(\"en\", \"NTT Data Corporation is a Japanese multinational information technology services and consulting company headquartered in Tokyo, Japan.\")\n",
-    "org_item.sitelinks.set(\"enwiki\", \"NTT Data\")\n",
-    "\n"
+    "org_item.sitelinks.set(\"enwiki\", \"NTT Data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a5f4749",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "org_item."
    ]
   },
   {
