Work in progress

--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -622,7 +622,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "org_item."
+    "new_qualifiers = Qualifiers()\n",
+    "\n",
+    "new_qualifiers.add(\"P31\", \"Q5\", snak_type=WikibaseSnakType.VALUE)"
    ]
   },
   {
