--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -618,6 +618,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ebfe954d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "org_item.add_claims"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "15b8674f",
    "metadata": {},
    "outputs": [],
