--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -622,7 +622,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "org_item.add_claims()"
+    "claims = list()\n",
+    "\n"
    ]
   },
   {
