--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -617,13 +617,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "ebfe954d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Property.__init__() takes from 1 to 2 positional arguments but 3 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/root/wikibase-nttdata/notebooks/insert_teams_data.ipynb Cell 16\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22524f4f545f4a41525649535f4c494e4f4445227d/root/wikibase-nttdata/notebooks/insert_teams_data.ipynb#X31sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m org_item\u001b[39m.\u001b[39madd_claims([Property(\u001b[39m\"\u001b[39;49m\u001b[39mP31\u001b[39;49m\u001b[39m\"\u001b[39;49m, Item(\u001b[39m\"\u001b[39;49m\u001b[39mQ4830453\u001b[39;49m\u001b[39m\"\u001b[39;49m))])\n",
+      "\u001b[0;31mTypeError\u001b[0m: Property.__init__() takes from 1 to 2 positional arguments but 3 were given"
+     ]
+    }
+   ],
    "source": [
-    "claims = list()\n",
-    "\n"
+    "org_item.add_claims([Property(\"P31\", Item(\"Q4830453\"))])"
    ]
   },
   {
@@ -632,9 +643,7 @@
    "id": "15b8674f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "org_item.add_claims([Property(\"P31\", Item(\"Q4830453\"))])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
