--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -634,7 +634,10 @@
     }
    ],
    "source": [
-    "org_item.add_claims([Property(\"P31\", Item(\"Q4830453\"))])"
+    "org_item.add_claims([Property(\"P31\", Item(\"Q4830453\"))])\n",
+    "\n",
+    "\n",
+    "datatypes.String(prop_nr='P31', value='Q4830453')"
    ]
   },
   {
