--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "1334018b-1b0d-4c5f-af1f-0fedbb61b5e0",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "3779edb8",
    "metadata": {},
    "outputs": [],
@@ -104,13 +104,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(column_mapping_data)\n",
     "column_mapping = df.set_index(\"column\").T.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "970ea222",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Id': {'prop': 'P1', 'data_type': 'string'},\n",
+       " 'Name': {'prop': 'P2', 'data_type': 'string'},\n",
+       " 'Family Name': {'prop': 'P3', 'data_type': 'string'},\n",
+       " 'Birthdate': {'prop': 'P4', 'data_type': 'time'},\n",
+       " 'Nationality': {'prop': 'P5', 'data_type': 'string'},\n",
+       " 'Start date': {'prop': 'P6', 'data_type': 'time'},\n",
+       " 'End date': {'prop': 'P7', 'data_type': 'time'},\n",
+       " 'Category': {'prop': 'P8', 'data_type': 'wikibase-item'},\n",
+       " 'Task': {'prop': 'P9', 'data_type': 'wikibase-item'},\n",
+       " 'part of': {'prop': 'P10', 'data_type': 'string'},\n",
+       " 'owner': {'prop': 'P11', 'data_type': 'wikibase-item'},\n",
+       " 'Client Type': {'prop': 'P12', 'data_type': 'string'},\n",
+       " 'Task Start date': {'prop': 'P13', 'data_type': 'time'},\n",
+       " 'Task End date': {'prop': 'P14', 'data_type': 'time'},\n",
+       " 'part_of': {'prop': 'P15', 'data_type': 'string'},\n",
+       " 'assigned to': {'prop': 'P16', 'data_type': 'wikibase-item'},\n",
+       " 'supervised by': {'prop': 'P17', 'data_type': 'wikibase-item'},\n",
+       " 'Duration (in days)': {'prop': 'P18', 'data_type': 'time'}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "column_mapping"
    ]
   },
   {
