--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9ef43b03-7605-465e-90b6-e02d86f56edb",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1334018b-1b0d-4c5f-af1f-0fedbb61b5e0",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3779edb8",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "094b17a2-212a-43c4-bcf2-9b21f05a5d0f",
    "metadata": {},
    "outputs": [],
@@ -59,22 +59,13 @@
     "    \"\"\"\n",
     "    wbi_config['MEDIAWIKI_API_URL'] = 'http://139.144.66.193:8181/api.php'\n",
     "    wbi_config['SPARQL_ENDPOINT_URL'] = '\"http://139.144.66.193:8282/proxy/wdqs/bigdata/namespace/wdq/sparql\"'\n",
-    "    wbi_config['WIKIBASE_URL'] = 'http://wikibase.svc'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "01c04e6a-c475-4f01-8f82-2bd1e5d4523d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    wbi_config['WIKIBASE_URL'] = 'http://wikibase.svc'\n",
     "setup_config()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8012c13a-2f8b-4205-8752-bb32c8f1538b",
    "metadata": {},
    "outputs": [
@@ -89,16 +80,7 @@
     }
    ],
    "source": [
-    "login = wbi_login.Login(user=WDUSER, password=WDPASS)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "1c962b5b-aea4-474f-8081-86f80e146f83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "login = wbi_login.Login(user=WDUSER, password=WDPASS)\n",
     "wbi = WikibaseIntegrator(login=login)"
    ]
   },
@@ -106,17 +88,6 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "b9dc947d-e9c0-4448-b967-9f3afa9e5f8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(column_mapping_data)\n",
-    "column_mapping = df.set_index(\"column\").T.to_dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "970ea222",
    "metadata": {},
    "outputs": [
     {
@@ -142,12 +113,14 @@
        " 'Duration (in days)': {'prop': 'P18', 'data_type': 'time'}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_csv(column_mapping_data)\n",
+    "column_mapping = df.set_index(\"column\").T.to_dict()\n",
     "column_mapping"
    ]
   },
