--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -126,112 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "aa920ff6",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Family Name</th>\n",
-       "      <th>Birthdate</th>\n",
-       "      <th>Nationality</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Start date</th>\n",
-       "      <th>End date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>S000001</td>\n",
-       "      <td>Mohammad Zain</td>\n",
-       "      <td>Abbas</td>\n",
-       "      <td>09/05/1995</td>\n",
-       "      <td>Pakistani</td>\n",
-       "      <td>SK-N3</td>\n",
-       "      <td>19/07/2022</td>\n",
-       "      <td>06/09/2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>S000002</td>\n",
-       "      <td>Kainaat</td>\n",
-       "      <td>Amjid</td>\n",
-       "      <td>30/12/1996</td>\n",
-       "      <td>Pakistani</td>\n",
-       "      <td>SK-N1</td>\n",
-       "      <td>19/07/2022</td>\n",
-       "      <td>13/09/2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>S000003</td>\n",
-       "      <td>Sergio</td>\n",
-       "      <td>Postigo</td>\n",
-       "      <td>12/02/1996</td>\n",
-       "      <td>Peru</td>\n",
-       "      <td>SK-N2</td>\n",
-       "      <td>26/07/2022</td>\n",
-       "      <td>13/10/2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>S000004</td>\n",
-       "      <td>Emmanuel</td>\n",
-       "      <td>Jamin</td>\n",
-       "      <td>28/09/1978</td>\n",
-       "      <td>French</td>\n",
-       "      <td>SKL-N2</td>\n",
-       "      <td>10/01/2015</td>\n",
-       "      <td>11/01/2015</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        Id           Name Family Name   Birthdate Nationality Category  \\\n",
-       "0  S000001  Mohammad Zain       Abbas  09/05/1995   Pakistani    SK-N3   \n",
-       "1  S000002        Kainaat       Amjid  30/12/1996   Pakistani    SK-N1   \n",
-       "2  S000003         Sergio     Postigo  12/02/1996        Peru    SK-N2   \n",
-       "3  S000004       Emmanuel       Jamin  28/09/1978      French   SKL-N2   \n",
-       "\n",
-       "   Start date    End date  \n",
-       "0  19/07/2022  06/09/2022  \n",
-       "1  19/07/2022  13/09/2022  \n",
-       "2  26/07/2022  13/10/2022  \n",
-       "3  10/01/2015  11/01/2015  "
+       "{'SEMBU Team': {'Client Type': 'NTTData'}}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "team_df = pd.read_csv(team_data)\n",
-    "team_df.head()"
+    "__columns = [\"Client Type\", \"Client\"]\n",
+    "__df = pd.read_csv(project_data, usecols=__columns).drop_duplicates()\n",
+    "__data = __df.set_index(\"Client\").T.to_dict()"
    ]
   },
   {
