--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -149,6 +149,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "f78c0a4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(__data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "id": "9ad683cc",
    "metadata": {},
