--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -149,23 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "f78c0a4c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict"
+       "'SEMBU Team'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(__data)"
+    "list(__data.keys())[0]"
    ]
   },
   {
