--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -149,23 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "f78c0a4c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'SEMBU Team'"
+       "{'Client Type': 'NTTData'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(__data.keys())[0]"
+    "k = list(__data.keys())[0]\n",
+    "__data[k]"
    ]
   },
   {
