--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -149,24 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "f78c0a4c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Client Type': 'NTTData'}"
+       "dict_keys(['Client Type'])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "k = list(__data.keys())[0]\n",
-    "__data[k]"
+    "__data[k].keys()"
    ]
   },
   {
