--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -149,24 +149,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "f78c0a4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k = list(__data.keys())[0]\n",
+    "p = list(__data[k].keys())[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7707190e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['Client Type'])"
+       "{'prop': 'P12', 'data_type': 'string'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "k = list(__data.keys())[0]\n",
-    "__data[k].keys()"
+    "column_mapping[p]"
    ]
   },
   {
