Work in progress

--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -160,6 +160,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "64f39820",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SEMBU Team'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "id": "7707190e",
    "metadata": {},
