Work in progress

--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -149,7 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "id": "bf8e39b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item = Item(wbi, data=__data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "f78c0a4c",
    "metadata": {},
    "outputs": [],
