--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -149,12 +149,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "bf8e39b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<LanguageValue @b0b280 _LanguageValue__language='en' _LanguageValue__value='An organization named SEMBU Team' _LanguageValue__removed=False>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "__key = list(__data.keys())[0]\n",
+    "item = wbi.item.new()\n",
+    "item.labels.set(\"en\", __key)\n",
+    "item.aliases.set(\"en\", __key)\n",
+    "item.descriptions.set(\"en\", \"An organization named {}\".format(__key))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12ed5fde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "item = Item(wbi, data=__data)"
+    "item.claims.add(String())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a26aedce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = item.write()"
    ]
   },
   {
@@ -164,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k = list(__data.keys())[0]\n",
+    "k = \n",
     "p = list(__data[k].keys())[0]"
    ]
   },
