--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "8012c13a-2f8b-4205-8752-bb32c8f1538b",
    "metadata": {},
    "outputs": [
@@ -149,17 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "id": "bf8e39b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<LanguageValue @b0b280 _LanguageValue__language='en' _LanguageValue__value='An organization named SEMBU Team' _LanguageValue__removed=False>"
+       "<LanguageValue @db7130 _LanguageValue__language='en' _LanguageValue__value='An organization named SEMBU Team' _LanguageValue__removed=False>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,22 +174,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "12ed5fde",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Claims @db6d10 _Claims__claims={'P12': [<String @db6a70 _Claim__mainsnak=<Snak @b24f10 _Snak__snaktype=<WikibaseSnakType.KNOWN_VALUE: 'value'> _Snak__property_number='P12' _Snak__hash=None _Snak__datavalue={'value': 'NTTdata', 'type': 'string'} _Snak__datatype='string'> _Claim__type='statement' _Claim__qualifiers=<Qualifiers @c46950 _Qualifiers__qualifiers={}> _Claim__qualifiers_order=[] _Claim__id=None _Claim__rank=<WikibaseRank.NORMAL: 'normal'> _Claim__removed=False _Claim__references=<References @c477f0 _References__references=[]>>]}>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "item.claims.add(String())"
+    "item.claims.add(String(value='NTTdata', prop_nr='P12'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "a26aedce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Error while writing to the Wikibase instance\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/entities/baseentity.py\", line 255, in _write\n",
+      "    json_result: dict = mediawiki_api_call_helper(data=payload, login=login, allow_anonymous=allow_anonymous, is_bot=is_bot, **kwargs)\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 211, in mediawiki_api_call_helper\n",
+      "    return mediawiki_api_call('POST', mediawiki_api_url=mediawiki_api_url, session=session, data=data, headers=headers, max_retries=max_retries, retry_after=retry_after, **kwargs)\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 122, in mediawiki_api_call\n",
+      "    raise ModificationFailed(json_data['error'])\n",
+      "wikibaseintegrator.wbi_exceptions.ModificationFailed: 'Item [[Item:Q5|Q5]] already has label \"SEMBU Team\" associated with language code en, using the same description text.'\n"
+     ]
+    },
+    {
+     "ename": "ModificationFailed",
+     "evalue": "'Item [[Item:Q5|Q5]] already has label \"SEMBU Team\" associated with language code en, using the same description text.'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModificationFailed\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[1;32m/root/wikibase-nttdata/notebooks/insert_org_data.ipynb Cell 10\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22524f4f545f4a41525649535f4c494e4f4445227d/root/wikibase-nttdata/notebooks/insert_org_data.ipynb#X36sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m res \u001b[39m=\u001b[39m item\u001b[39m.\u001b[39;49mwrite()\n",
+      "File \u001b[0;32m~/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/entities/item.py:147\u001b[0m, in \u001b[0;36mItemEntity.write\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    133\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwrite\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs: Any) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m ItemEntity:\n\u001b[1;32m    134\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    135\u001b[0m \u001b[39m    Write the ItemEntity data to the Wikibase instance and return the ItemEntity object returned by the instance.\u001b[39;00m\n\u001b[1;32m    136\u001b[0m \u001b[39m    extend :func:`~wikibaseintegrator.entities.BaseEntity._write`\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    145\u001b[0m \u001b[39m    :return: an ItemEntity of the response from the instance\u001b[39;00m\n\u001b[1;32m    146\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 147\u001b[0m     json_data \u001b[39m=\u001b[39m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m_write(data\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_json(), \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    148\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfrom_json(json_data\u001b[39m=\u001b[39mjson_data)\n",
+      "File \u001b[0;32m~/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/entities/baseentity.py:255\u001b[0m, in \u001b[0;36mBaseEntity._write\u001b[0;34m(self, data, summary, login, allow_anonymous, clear, is_bot, **kwargs)\u001b[0m\n\u001b[1;32m    252\u001b[0m login \u001b[39m=\u001b[39m login \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mapi\u001b[39m.\u001b[39mlogin\n\u001b[1;32m    254\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 255\u001b[0m     json_result: \u001b[39mdict\u001b[39m \u001b[39m=\u001b[39m mediawiki_api_call_helper(data\u001b[39m=\u001b[39;49mpayload, login\u001b[39m=\u001b[39;49mlogin, allow_anonymous\u001b[39m=\u001b[39;49mallow_anonymous, is_bot\u001b[39m=\u001b[39;49mis_bot, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    256\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m:\n\u001b[1;32m    257\u001b[0m     logging\u001b[39m.\u001b[39mexception(\u001b[39m'\u001b[39m\u001b[39mError while writing to the Wikibase instance\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py:211\u001b[0m, in \u001b[0;36mmediawiki_api_call_helper\u001b[0;34m(data, login, mediawiki_api_url, user_agent, allow_anonymous, max_retries, retry_after, maxlag, is_bot, **kwargs)\u001b[0m\n\u001b[1;32m    207\u001b[0m     session \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    209\u001b[0m log\u001b[39m.\u001b[39mdebug(data)\n\u001b[0;32m--> 211\u001b[0m \u001b[39mreturn\u001b[39;00m mediawiki_api_call(\u001b[39m'\u001b[39;49m\u001b[39mPOST\u001b[39;49m\u001b[39m'\u001b[39;49m, mediawiki_api_url\u001b[39m=\u001b[39;49mmediawiki_api_url, session\u001b[39m=\u001b[39;49msession, data\u001b[39m=\u001b[39;49mdata, headers\u001b[39m=\u001b[39;49mheaders, max_retries\u001b[39m=\u001b[39;49mmax_retries, retry_after\u001b[39m=\u001b[39;49mretry_after, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m~/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py:122\u001b[0m, in \u001b[0;36mmediawiki_api_call\u001b[0;34m(method, mediawiki_api_url, session, max_retries, retry_after, **kwargs)\u001b[0m\n\u001b[1;32m    120\u001b[0m \u001b[39m# duplicate error\u001b[39;00m\n\u001b[1;32m    121\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mcode\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m json_data[\u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m] \u001b[39mand\u001b[39;00m json_data[\u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m][\u001b[39m'\u001b[39m\u001b[39mcode\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mmodification-failed\u001b[39m\u001b[39m'\u001b[39m:  \u001b[39m# pragma: no cover\u001b[39;00m\n\u001b[0;32m--> 122\u001b[0m     \u001b[39mraise\u001b[39;00m ModificationFailed(json_data[\u001b[39m'\u001b[39m\u001b[39merror\u001b[39m\u001b[39m'\u001b[39m])\n\u001b[1;32m    124\u001b[0m \u001b[39m# others case\u001b[39;00m\n\u001b[1;32m    125\u001b[0m \u001b[39mraise\u001b[39;00m MWApiError(json_data)\n",
+      "\u001b[0;31mModificationFailed\u001b[0m: 'Item [[Item:Q5|Q5]] already has label \"SEMBU Team\" associated with language code en, using the same description text.'"
+     ]
+    }
+   ],
    "source": [
     "res = item.write()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2e70f137",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Client Type'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p"
    ]
   },
   {
