--- a/notebooks/insert_org_data.ipynb
+++ b/notebooks/insert_org_data.ipynb
@@ -205,6 +205,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "459a526e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ETYPE',\n",
+       " '_BaseEntity__api',\n",
+       " '_BaseEntity__claims',\n",
+       " '_BaseEntity__id',\n",
+       " '_BaseEntity__lastrevid',\n",
+       " '_BaseEntity__pageid',\n",
+       " '_BaseEntity__title',\n",
+       " '_BaseEntity__type',\n",
+       " '_ItemEntity__aliases',\n",
+       " '_ItemEntity__descriptions',\n",
+       " '_ItemEntity__labels',\n",
+       " '_ItemEntity__sitelinks',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_get',\n",
+       " '_write',\n",
+       " 'add_claims',\n",
+       " 'aliases',\n",
+       " 'api',\n",
+       " 'claims',\n",
+       " 'clear',\n",
+       " 'delete',\n",
+       " 'descriptions',\n",
+       " 'from_json',\n",
+       " 'get',\n",
+       " 'get_json',\n",
+       " 'id',\n",
+       " 'labels',\n",
+       " 'lastrevid',\n",
+       " 'new',\n",
+       " 'pageid',\n",
+       " 'sitelinks',\n",
+       " 'title',\n",
+       " 'type',\n",
+       " 'write',\n",
+       " 'write_required']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "04ff457d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ident = [x for x in str(res).split('\\n') if \"_id='Q\" in x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "03950c9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"\\t _BaseEntity__id='Q7'\\r\",\n",
+       " \"\\t _BaseEntity__claims=<Claims @db6740 _Claims__claims={'P12': [<String @d8a740 _Claim__mainsnak=<Snak @d8af50 _Snak__snaktype=<WikibaseSnakType.KNOWN_VALUE: 'value'> _Snak__property_number='P12' _Snak__hash='cd34aae809dc0a40a6eb8c6486518fadb0530e8f' _Snak__datavalue={'value': 'NTTdata', 'type': 'string'} _Snak__datatype='string'> _Claim__type='statement' _Claim__qualifiers=<Qualifiers @d8aef0 _Qualifiers__qualifiers={}> _Claim__qualifiers_order=[] _Claim__id='Q7$04FC9938-4CFB-4C8D-84B4-9EC6F5C9F6B6' _Claim__rank=<WikibaseRank.NORMAL: 'normal'> _Claim__removed=False _Claim__references=<References @d8af20 _References__references=[]>>]}>\\r\"]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ident"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "id": "236f4a50",
    "metadata": {},
