--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9ef43b03-7605-465e-90b6-e02d86f56edb",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "1334018b-1b0d-4c5f-af1f-0fedbb61b5e0",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3779edb8",
    "metadata": {},
    "outputs": [],
@@ -816,6 +816,49 @@
     "        # get the wikibase property\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5543aceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "__columns = [\"Id\", \"Name\", \"Family Name\", \"Birthdate\", \"Nationality\", \"Start date\", \"End date\"]\n",
+    "# __columns = [\"Id\", \"Name\", \"Family Name\", \"Birthdate\", \"Nationality\", \"Category\", \"Task\", \"Start date\", \"End date\"]\n",
+    "__df = pd.read_csv(team_data, usecols=__columns).drop_duplicates()\n",
+    "__df[\"full_name\"] = __df[\"Name\"] + \" \" + __df[\"Family Name\"]\n",
+    "__data = __df.set_index(\"full_name\").T.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "83c861f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Mohammad Zain Abbas', 'Kainaat Amjid', 'Sergio Postigo', 'Emmanuel Jamin'])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "__data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d475568",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
