--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -858,7 +858,10 @@
    "id": "9d475568",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "__keys = list(__data.keys())\n",
+    "for __key in __keys:"
+   ]
   }
  ],
  "metadata": {
