--- a/notebooks/insert_teams_data.ipynb
+++ b/notebooks/insert_teams_data.ipynb
@@ -854,14 +854,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9d475568",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Id': 'S000001', 'Name': 'Mohammad Zain', 'Family Name': 'Abbas', 'Birthdate': '09/05/1995', 'Nationality': 'Pakistani', 'Start date': '19/07/2022', 'End date': '06/09/2022'}\n",
+      "{'Id': 'S000002', 'Name': 'Kainaat', 'Family Name': 'Amjid', 'Birthdate': '30/12/1996', 'Nationality': 'Pakistani', 'Start date': '19/07/2022', 'End date': '13/09/2022'}\n",
+      "{'Id': 'S000003', 'Name': 'Sergio', 'Family Name': 'Postigo', 'Birthdate': '12/02/1996', 'Nationality': 'Peru', 'Start date': '26/07/2022', 'End date': '13/10/2022'}\n",
+      "{'Id': 'S000004', 'Name': 'Emmanuel', 'Family Name': 'Jamin', 'Birthdate': '28/09/1978', 'Nationality': 'French', 'Start date': '10/01/2015', 'End date': '11/01/2015'}\n"
+     ]
+    }
+   ],
    "source": [
     "__keys = list(__data.keys())\n",
-    "for __key in __keys:"
+    "for __key in __keys:\n",
+    "    print(__data[__key])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df23aacb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
